--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                     </div>
                 </div>
             </div>
+            <div class="water-tank-level">
+                <img src="lev.png" alt="Water Tank Level" class="water-tank-icon">
+                <div class="water-level-details">
+                    <h3>Water Tank Level</h3>
+                    <p>75%</p>
+                </div>
+            </div>
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
