--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="header">
             <h2>Tank Sensors</h2>
             <img src="imgg.png" alt="Fish Image" class="small-image">
+            <img src="imgg.png" alt="Fish Image" class="small-image">
         </div>
         <div class="content">
             <div class="sensor-box">
