--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="header">
             <h2>Tank Sensors</h2>
             <img src="imgg.png" alt="Fish Image" class="small-image">
+           
         </div>
         <div class="content">
             <div class="sensor-box">
@@ -55,9 +56,9 @@
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
-                    <!-- Replace this placeholder text with the actual status -->
-                    Pump Status: Running<br>
-                    Valve Status: Closed
+                    
+                    Bubbles : ON<br>
+                    Feeder  : ON
                 </div>
             </div>
         </div>
