--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="settings-icon"></div>
                     <div class="details">
                         <h3>Temp</h3>
-                        <p id="tempValue">15°</p>
+                        <p id="tempValue">15</p>
                     </div>
                 </div>
                 <div class="sensor air-ph">
