--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
                     <div class="settings-icon"></div>
                     <div class="details">
                         <h3>Air Molecules-PH</h3>
-                        <p>6.25% | PH Tank: Full</p>
+                        <p>8.1 | PH Tank: Full</p>
                     </div>
                 </div>
                 <div class="sensor tds">
                     <div class="settings-icon"></div>
                     <div class="details">
                         <h3>TDS</h3>
-                        <p>6.35%</p>
+                        <p>67</p>
                     </div>
                 </div>
                 <div class="sensor fish-food">
                     <div class="settings-icon"></div>
                     <div class="details">
                         <h3>Fish Food</h3>
-                        <p>95%</p>
+                        <p>80%</p>
                     </div>
                 </div>
             </div>
