--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>OFF</p>
+                        <p>ON</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
@@ -60,9 +60,10 @@
            
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
-<!--                 <div class="status-field">
+                <div class="status-field">
                     Bubbles : ON<br>
-                    Feeder  : ON
+                    Fill Aquarium : ON<br>
+<!--                     Feeder  : ON
                 </div> -->
             </div>
         </div>
