--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                 <div class="status-field">
                     Bubbles : ON<br>
                     Fill Aquarium : ON<br>
-<!--                     Feeder  : ON
-                </div> -->
+<!--                Feeder  : ON -->
+                    
+                </div>
             </div>
         </div>
     </div>
