--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>ON</p>
+                        <p>OFF</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
@@ -62,9 +62,20 @@
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
                     Bubbles : ON<br>
-                    Fill Aquarium : ON<br>
-<!--                Feeder  : ON -->
-                    
+<!--                     Fill Aquarium : ON<br>
+                    Feeder: ON <br>
+                    Heater: ON <br>
+                    Filter: ON<br>
+                    Drain: ON<br>
+                    Testing: ON<br>
+
+                    Bubbles : OFF<br>
+                    Fill Aquarium : OFF<br>
+                    Feeder: OFF <br>
+                    Heater: OFF <br>
+                    Filter: OFF<br>
+                    Drain: OFF<br>
+                    Testing: OFF<br> -->
                 </div>
             </div>
         </div>
