--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
                     Bubbles : ON<br>
-                    Feeder: ON <br>
+<!--                     Feeder: ON <br> -->
 <!--                     Fill Aquarium : ON<br>
                     Heater: ON <br>
                     Filter: ON<br>
