--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>ON</p>
+                        <p>OFF</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
