--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
+                    Fill Aquarium : ON<br>
                     Bubbles : ON<br>
 <!--                     Feeder: ON <br> -->
-<!--                     Fill Aquarium : ON<br>
                     Testing: ON<br>
                     Heater: ON <br>
                     Filter: ON<br>
