--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     Fill Aquarium : ON<br>
                     Bubbles : ON<br>
 <!--                     Feeder: ON <br> -->
-                    Testing: ON<br>
+<!--                     Testing: ON<br>
                     Heater: ON <br>
                     Filter: ON<br>
                     Drain: ON<br>
@@ -75,7 +75,7 @@
                     Heater: OFF <br>
                     Filter: OFF<br>
                     Drain: OFF<br>
-                    Testing: OFF<br> -->
+                    Testing: OFF<br> --> -->
                 </div>
             </div>
         </div>
