--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     Heater: OFF <br>
                     Filter: OFF<br>
                     Drain: OFF<br>
-                    Testing: OFF<br> --> -->
+                    Testing: OFF<br> -->
                 </div>
             </div>
         </div>
