--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
-                    Fill Aquarium : ON<br>
+<!--                     Fill Aquarium : ON<br> -->
                     Bubbles : ON<br>
+                    Filter: ON<br>
 <!--                     Feeder: ON <br> -->
 <!--                     Testing: ON<br>
                     Heater: ON <br>
