--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>ON</p>
+                        <p>OFF</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
@@ -60,7 +60,7 @@
            
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
-                <div class="status-field">
+<!--                 <div class="status-field"> -->
 <!--                     Bubbles : ON<br>
                     Feeder: ON <br> 
                     Heater: ON <br>
@@ -68,7 +68,7 @@
                     Filter: ON<br>
                     Drain: ON<br>
                     Testing: ON<br> -->
-                </div>
+<!--                 </div>  -->
             </div>
         </div>
     </div>
