--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>OFF</p>
+                        <p>ON</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
@@ -60,15 +60,15 @@
            
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
-<!--                 <div class="status-field"> -->
-<!--                     Bubbles : ON<br>
-                    Feeder: ON <br> 
-                    Heater: ON <br>
+                <div class="status-field">
+                    Bubbles : ON<br>
+<!--                     Feeder: ON <br> 
+                    Heater: ON <br> -->
                     Fill Aquarium : ON<br> 
-                    Filter: ON<br>
+<!--                     Filter: ON<br>
                     Drain: ON<br>
                     Testing: ON<br> -->
-<!--                 </div>  -->
+                </div> 
             </div>
         </div>
     </div>
