--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                     <div class="details">
                         <h3>Light</h3>
-                        <p>ON</p>
+                        <p>OFF</p>
                     </div>
                 </div>
                 <div class="sensor temp" id="tempSensor">
@@ -64,7 +64,7 @@
                     Bubbles : ON<br>
 <!--                     Feeder: ON <br> 
                     Heater: ON <br> -->
-                    Fill Aquarium : ON<br> 
+<!--                     Fill Aquarium : ON<br>  -->
 <!--                     Filter: ON<br>
                     Drain: ON<br>
                     Testing: ON<br> -->
