--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
                     Bubbles : ON<br>
-                    Testing: ON <br>
+                    Fill Aquarium : ON<br>
+<!--                     Testing: ON <br>
+ -->
+                    
 <!--                     Feeder: ON <br> 
                     Heater: ON <br> -->
-<!--                     Fill Aquarium : ON<br>  -->
+<!--                       -->
 <!--                     Filter: ON<br>
                     Drain: ON<br>
                     Testing: ON<br> -->
