--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
                     Bubbles : ON<br>
+                    Filter: ON<br>
                     
 <!--                     Fill Aquarium : ON<br>
  -->
