--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
-                    Bubbles : ON<br>
-                    Filter: ON<br>
+<!--                     Bubbles : ON<br>
+ -->
+                    
+<!--                     Filter: ON<br> -->
                     
 <!--                     Fill Aquarium : ON<br>
  -->
