--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             <div class="footer">
                 <h3>Today - Aquarium Status</h3>
                 <div class="status-field">
+                    Drain: ON<br>
+                    
 <!--                     Bubbles : ON<br>
  -->
                     
